# phelel

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  changelog.html  genindex.html  index.html  install.html  objects.inv  phelel-command.html  pyproject.toml  reference.html  search.html  searchindex.js  velph-command.html  velph-example.html  velph-init-template.html  velph-init.html  velph-subcommands.html  velph-toml-scheduler.html  velph-toml.html  velph.html  workflow.html
.doctrees/: changelog.doctree  environment.pickle  index.doctree  install.doctree  phelel-command.doctree  reference.doctree  velph-command.doctree  velph-example.doctree  velph-init-template.doctree  velph-init.doctree  velph-subcommands.doctree  velph-toml-scheduler.doctree  velph-toml.doctree  velph.doctree  workflow.doctree
_sources/: changelog.md  index.md  phelel-command.md  reference.md  velph-command.md  velph-init.md  velph-subcommands.md  velph-toml-scheduler.md  velph.md  workflow.md
_static/: documentation_options.js
doc/: changelog.md  conf.py  index.md  install.md  phelel-command.md  reference.md  velph-command.md  velph-example.md  velph-init-template.md  velph-init.md  velph-subcommands.md  velph-toml-cell.md  velph-toml-scheduler.md  velph-toml-vasp.md  velph-toml.md  velph.md  workflow.md
test/: LOCAL-POTENTIAL_C111_disp001.bin.xz  LOCAL-POTENTIAL_C111_perfect.bin.xz  LOCAL-POTENTIAL_CdAs2_111_disp001.bin.xz  LOCAL-POTENTIAL_CdAs2_111_disp002.bin.xz  LOCAL-POTENTIAL_CdAs2_111_disp003.bin.xz  LOCAL-POTENTIAL_CdAs2_111_disp004.bin.xz  conftest.py  test_file_IO.py  (+9 more)
(+157 files in other folders)
