[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phelel"
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
description = "Electron-phonon code."
authors = [
    {name = "Atsushi Togo", email = "atztogo@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "phono3py",
    "finufft",
    "click"
]
license = {file = "LICENSE"}

[project.scripts]
phelel = "phelel.scripts.phelel:run"
velph = "velph.cli:cmd_root"

[tool.setuptools.dynamic]
version = { attr = "phelel.version.__version__" }

[tool.ruff]
line-length = 88
lint.select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # pycodestyle-errors
    "D", # pydocstyle
]
lint.extend-ignore = [
    "D417",
    "D100",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
